samples/_failures_safe/1761511855_54fb1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4353ca90.c: In function ‘main’:
./samples/SAFE/__tmp_4353ca90.c:161:5: error: expected declaration or statement at end of input
  161 |     return 0;
      |     ^~~~~~
